cmake_minimum_required(VERSION 3.22)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(P1_TwoSum
        "editor/cn/P1_TwoSum.cpp")

add_executable(P2_AddTwoNumbers  "editor/cn/P2_AddTwoNumbers.cpp")
add_executable(P5_LongestPalindromicSubstring editor/cn/P5_LongestPalindromicSubstring.cpp)
add_executable(P15_ThreeSum editor/cn/P15_ThreeSum.cpp)
add_executable(P20_ValidParentheses editor/cn/P20_ValidParentheses.cpp)
add_executable(P21_MergeTwoSortedLists editor/cn/P21_MergeTwoSortedLists.cpp)
add_executable(P23_MergeKSortedLists editor/cn/P23_MergeKSortedLists.cpp)
add_executable(P24_SwapNodesInPairs editor/cn/P24_SwapNodesInPairs.cpp)
add_executable(P25_ReverseNodesInKGroup editor/cn/P25_ReverseNodesInKGroup.cpp)


add_executable(P36_ValidSudoku editor/cn/P36_ValidSudoku.cpp)

add_executable(P42_TrappingRainWater editor/cn/P42_TrappingRainWater.cpp)

add_executable(P43_MultiplyStrings editor/cn/P43_MultiplyStrings.cpp)

add_executable(P44_WildcardMatching editor/cn/P44_WildcardMatching.cpp)

add_executable(P48_RotateImage editor/cn/P48_RotateImage.cpp)

add_executable(P94_BinaryTreeInorderTraversal editor/cn/P94_BinaryTreeInorderTraversal.cpp)

add_executable(P98_ValidateBinarySearchTree editor/cn/P98_ValidateBinarySearchTree.cpp)

add_executable(P102_BinaryTreeLevelOrderTraversal editor/cn/P102_BinaryTreeLevelOrderTraversal.cpp)

add_executable(P1557_MinimumNumberOfVerticesToReachAllNodes editor/cn/P1557_MinimumNumberOfVerticesToReachAllNodes.cpp)

add_executable(P1971_FindIfPathExistsInGraph editor/cn/P1971_FindIfPathExistsInGraph.cpp)

add_executable(P547_NumberOfProvinces editor/cn/P547_NumberOfProvinces.cpp)

add_executable(P684_RedundantConnection editor/cn/P684_RedundantConnection.cpp)

add_executable(P685_RedundantConnectionIi editor/cn/P685_RedundantConnectionIi.cpp)

add_executable(P1584_MinCostToConnectAllPoints editor/cn/P1584_MinCostToConnectAllPoints.cpp)

add_executable(P743_NetworkDelayTime editor/cn/P743_NetworkDelayTime.cpp)

add_executable(P701_InsertIntoABinarySearchTree editor/cn/P701_InsertIntoABinarySearchTree.cpp)

add_executable(P110_BalancedBinaryTree editor/cn/P110_BalancedBinaryTree.cpp)

add_executable(P912_SortAnArray editor/cn/P912_SortAnArray.cpp)